# micro-grad

./: .gitignore  LICENSE  README.md  micrograd_exercises.ipynb  pyproject.toml  pyproject.toml.r1usaglf
scripts/: scratchpad.py
src/: __init__.py  constants.py  graphviz.py  loss.py  neuron.py  train.py  utils.py  value.py  visualization.py
tests/: test_value.py
