[project]
name = "micro-grad"
version = "0.1.0"
description = "Default template for PDM package"
dependencies = ["numpy>=2.2.2", "matplotlib>=3.10.0", "graphviz>=0.20.3", "scikit-learn>=1.6.1"]
requires-python = "==3.12.*"
readme = "README.md"
packages = ["src", "tests"]

[[project.authors]]
name = "Taimur Ibrahim"
email = "tai.him18@gmail.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "mypy>=1.14.1",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
exclude = ["scripts", "tests"]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN401", "D100", "D104", "D107", "D205", "E501", "EM", "FIX", "PLR2004", "TD", "TRY", "COM812", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.*" = ["A", "ANN", "ARG", "B", "BLE", "C901", "D", "DTZ", "EM", "FBT", "G", "INP", "N", "PGH", "PIE", "PLR", "PLW", "PT006", "PT007", "PT011", "PT019", "PYI", "RSE", "S", "S101", "SIM", "SLF", "TCH", "TRY"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["src", "functions", "e2e", "db", "tests", "openapi"]

[tool.ruff.lint.pylint]
max-args = 10
max-returns = 10

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 120

[tool.mypy]
packages = ["src"]
python_version = "3.12"
disable_error_code = "import-untyped"
implicit_reexport = false
show_error_codes = true
strict = true
exclude = "scripts"

[[tool.mypy.overrides]]
module = "tests.*"
disallow_any_generics = false
disallow_untyped_decorators = false

[tool.pdm]
distribution = false

[tool.pdm.scripts]
mypy = "mypy ."
test = "pytest . --cov"
scratchpad = "python -m scripts.scratchpad"
